Solved the vertical align. But height issue on small screens is still a bug

--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ html {
 }
 .container {
   max-width: 992px;
+  height: 100%;
   margin: 0 auto;
   background: yellow;
 }
@@ -18,12 +19,21 @@ html {
 }
 .pinUpGirl {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 500px;
 }
 .cipherSide {
-  width: 50%;
-  float: left;
+  position: relative;
   background: red;
+  width: 50%;
+  height: 500px;
+  float: left;
+}
+.verticalAlign {
+  position: absolute;
+  top: 25%;
+  height: 50%;
+  width: 100%;
+  background: yellow;
 }
 textarea {
   display: block;
@@ -42,5 +52,9 @@ textarea {
   .cipherSide {
     float: none;
     width: 100%;
+  }
+  .verticalAlign {
+    top: 0;
+    height: 0;
   }
 }
